objects/adapps__OptimizerPlus_Incomplete_Chatter_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__HasAboutMe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasAboutMe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>adapps__HasPhoto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasPhoto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>adapps__Incomplete_Chatter__c</fullName>
        <label>Incomplete Chatter Profiles</label>
        <referenceTo>adapps__OptimizerPlus_Incomplete_Chatter__c</referenceTo>
        <relationshipLabel>Incomplete Chatter Items</relationshipLabel>
        <relationshipName>Incomplete_Chatter_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>adapps__User__c</fullName>
        <label>User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Incomplete Chatter Item</label>
    <nameField>
        <label>Incomplete Chatter Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incomplete Chatter Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>